Really simple Notes list

--- a/app/views/Notes/list.html
+++ b/app/views/Notes/list.html
@@ -1,4 +1,8 @@
 #{extends 'main.html' /}
 #{set title:'Lists' /}
 
-Lists!
+<ul>
+	#{list items:notes, as:'note'}
+		<li>${note}</li>
+	#{/list}
+</ul>
