--- a/app/views/Notes/addNote.html
+++ b/app/views/Notes/addNote.html
@@ -1,10 +1,11 @@
 #{extends 'main.html' /}
 #{set title:'Lists' /}
 
-#{form @Notes.addNote()}
+#{form @Notes.saveNote()}
 <p>
 	<label for="content">Content</label>
-	<textarea name="content" id="content"></textarea>
+	<textarea name="note.content" id="content">${note?.content}</textarea>
+	#{error 'note.content'/}
 </p>
 <p>
 	<input type="submit" value="Save"/>
